fix: fixes spacing names

--- a/src/assets/styles/tokens/tokens.scss
+++ b/src/assets/styles/tokens/tokens.scss
@@ -59,7 +59,7 @@ $spacing-none: 0;
 $spacing-quarter: 0.25em;
 $spacing-half: 0.5em;
 $spacing-base: 1em;
-$spacing-1-5x: 1.5em;
-$spacing-2x: 2em;
-$spacing-3x: 3em;
+$spacing-loose: 1.5em;
+$spacing-double: 2em;
+$spacing-triple: 3em;
 $spacing-4x: 4em;
